#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.4.4 (devel) ==
 * Made icons of D source elements (classes, structs templates, etc.) consistent throughtout the UI.

== DDT 0.4.3 (2011-06-02) ==
 * Resolved issue #12, added Content Assist preference page. 
   * Options: Completion insert/override; Single proposals automatic insert; Auto-Activation enable and delay;
   * Added Content Assist proposal auto-insertion trigger characters: ' ', '=', ';', '.'.  
 * Fixed issue #31: Indent auto edit: full indent deletion is incorrectly triggered on certain positions.
 * Fixed some shortcomings related to auto indent in lines that started with comments.
 * Resolved issue #30, changed implementation of editor folding to a newer API:
   * Now the editor can fold non-DDoc comments as well (a previous limitation).
   * Now the editor can fold unittests and conditional declarations (debug/version).
   * Added folding preference page, can now configure the initial state (folded or not) of each folding group.
   * The folding groups/kinds are now: comments, DDoc comments, module header comments, aggregate types, functions, unittests, conditional declarations.
 * Fixed minor source range bugs for template references and typeof() references.
 * `is` and `!is` now correctly considered as keywords for the purposes of syntax highlighting.
   * `!in` is fully highlighted, instead of just `in`.
 * Fixed issue #41 and some other related parsing bugs with qualified expressions (DotIdExp).
 * Fixed issue where syntax highlighting would break when typing inside a multi-line r"" string.
 
== DDT 0.4.2 (2011-04-29) ==
 * Fixed issue #33, bug with spaces in projects names: made all variables in DMD response file resolve to quote escaped values.
 * Fixed bug where all D comments where considered DDoc comments for documentation hover.
 * Fixed limitation where problem hovers where not more prioritary than documentation hovers.