@@ -1,0 +1,30 @@
+/*******************************************************************************
+ * Copyright (c) 2000, 2007 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ 
+ *******************************************************************************/
+package mmrnmhrm.ui.editor;
+
+//import org.eclipse.osgi.util.NLS;
+
+public final class ActionMessages /*extends NLS*/ {
+	
+	private ActionMessages() {
+		// Do not instantiate
+	}
+	
+	public static String MemberFilterActionGroup_hide_variables_label = "Hide variables";
+	public static String MemberFilterActionGroup_hide_variables_tooltip;
+	public static String MemberFilterActionGroup_hide_variables_description;
+	public static String MemberFilterActionGroup_hide_functions_label = "Hide functions";
+	public static String MemberFilterActionGroup_hide_functions_tooltip;
+	public static String MemberFilterActionGroup_hide_functions_description;
+	public static String MemberFilterActionGroup_hide_private_label = "Hide private members";
+	public static String MemberFilterActionGroup_hide_private_tooltip;
+	public static String MemberFilterActionGroup_hide_private_description;
+	
+}
